Add color pallete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
     --bone: #ece2d0;
     --pink: #e56399;
     --middle-blue:#7fd1b9;
-    ---brown:#d3a588;
+    --brown:#d3a588;
+    --deep-brown: #7a6563;
 }
 
 body {
